# applyr

./: .eslintrc.weasyprint.js  .gitignore  .pre-commit-config.yaml  .prettierrc  .prettierrc.weasyprint  CLAUDE.md  Makefile  README.md  TEMPLATE_SETUP.md  config.template.yaml  package-lock.json  pyproject.toml  trilogy_care_interview_preparation.md
.claude/agents/: cole.md
.claude/commands/: applyr_agent.md  applyr_cli_agent.md  ats.md  career_advisor.md  company_analysis_simple.md  cover_letter.md  cover_letter_validate.md  job_ranker.md  job_ranker_simple.md  pdf_agent.md  real_estate.md  teacher.md
.claude/commands/company_analysis/: analyze.md  discover.md  synthesize.md  validate.md
.claude/commands/curriculum_developer/: analyze.md  discover.md  synthesize.md  validate.md
.github/workflows/: tests.yml
applyr/: __init__.py  aggregator.py  ats_analyzer.py  ats_keywords.py  ats_output.py  ats_parsers.py  ats_scoring.py  batch.py  cli.py  config.py  database.py  docx_converter.py  html_processor.py  pdf_converter.py  pdf_converter_simple.py  scraper.py  scraper_base.py  scraper_employment_hero.py  scraper_factory.py  scraper_indeed_manual.py  scraper_linkedin_manual.py
applyr/styles/: ats.css  ats_docx.css  executive.css  heebo-premium.css  minimal.css  professional.css  sensylate.css
data/images/: cole_morton_svg_data_uris.txt
data/outputs/: astro-font-investigation.json  font-weight-analysis.json  font_rendering_comparison.json  job_rankings_analysis.json  test_document.html
data/outputs/company_analysis/: AUDC_Pty_Ltd_20251024_synthesis.md  Aspirante_20250927.md  Auto_&_General_Holdings_Pty_Ltd_20251024_synthesis.md  Binance_20251024_analysis.md  CANSTAR_20250115.md  Canva_20250124_analysis.md  Codafication_Pty_Ltd_20251013.md  FORWOOD_ENTERPRISES_PTY_LTD_20250925_synthesis.md  Fone_Dynamics_Pty_Ltd_20250115.md  Megaport_Pty_Limited_20251002.md  Michael_Hill_20250115.md  Moonward_20250930.md  Optizmo_20250924.md  Peoplebank_Australia_QLD_20250929.md  Rehaula_Pty_Ltd_20250929.md  Resly_Pty_Ltd_20250115.md  Transmax_Pty_Ltd_20250926.md  Trilogy_Care_Pty_Ltd_20250914.md  Uniti_Internet_20250115.md  iSelect_Ltd_20250925_synthesis.md
data/outputs/cover_letters/: LinkedIn Reach Out.md  TEMPLATE.md  anson_mccade.md  aspirante.md  aurion.md  auto_general_holdings.md  auto_general_holdings.txt  binance.md  bluefin_resources.md  canstar.md  codafication.md  dappleos.md  devision_recruitment.docx  devision_recruitment.md  devision_recruitment.txt  edison_talent.md  felix.md  finxl.md  fone_dynamics.md  forwood.md  forwood_mobile.md  foundu.md  fsoft.md  iselect.md  iselect_87763746.md  iselect_cms.md  just_digital_people.md  megaport.md  megaport.txt  michael_hill.md  michael_page_recruitment_test.md  moonward.md  optizmo.md  peoplebank_australia_qld.md  rehaula.md  resly.md  resly_application_answers.md  resly_application_answers_plaintext.txt  squiz.md  stacey_rental_assistance_email_plaintext.txt  (+2 more)
data/outputs/curriculum_development/: Trilogy_Care_Pty_Ltd_20250915.md
data/outputs/description_summaries/: 20250902_job_descriptions_aggregate.md  20250912_job_descriptions_aggregate.md
data/outputs/interview_prep/: trilogy_care_senior_software_engineer_guide.md
data/outputs/job_descriptions/: 12345678_Test_Company_Pty_Ltd_Software_Engineer.md  86218557_SPENNA_PTY_LTD_UI_UX_Developer_Tech_Development_Lead.md  86318117_Enzen_Pty_Ltd_Full_Stack_Software_Developers_AI_JavaScript_X2_Positions.md  86326281_Superloop_Software_Developer.md  86387606_Jacobi_Strategies_Pty_Ltd_Front_End_Software_Engineer_React_Java.md  86398474_Squiz_Australia_Pty_Ltd_Software_Engineer_Typescript_React_Node_AWS.md  86406521_Private_Advertiser_Junior_Full_stack_Developer.md  86418322_PRA_Senior_Frontend_Developer.md  86524100_Squiz_Australia_Pty_Ltd_Tech_Principal_Lead_Engineer_Typescript_Node_React_AWS_Contract.md  86588210_Felix_Software_Software_Engineer.md  86741747_AutumnCRM_Pty_Ltd_Senior_Software_Engineer.md  86764912_foundU_Senior_Front_End_Developer.md  86777578_Ray_White_AKG_Full_Time_Web_Developer.md  86792606_Trilogy_Care_Pty_Ltd_Senior_Software_Engineer.md  86794682_Trilogy_Care_Pty_Ltd_Software_Engineer.md  86875657_FinXL_IT_Professional_Services_UX_UI_Developer.md  86876585_Aurion_Corporation_Pty_Ltd_Senior_Developer.md  86891660_FSoft_Pty_Ltd_Senior_Web_Developer.md  86892541_DIY_Tiles_Wordpress_Web_Developer.md  (+86 more)
data/raw/: about_me_page.md  advertisements.csv  professional_description.md  properties.csv  reality_check.md  resume.md  software_engineering_interviews_australia.md  work_experience.md
data/raw/jobs/: README.md  (+1 more)
docs/: CI_CD.md  CLAUDE.md  DOCUMENTATION_ASSESSMENT.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  LINTING_FORMATTING_STATUS.md  PDF_IMPLEMENTATION.md  README.md  STYLE_GUIDE.md  TERMS_OF_SERVICE.md  TESTING.md
scripts/: analyze-font-weight.js  compare-font-rendering.js  generate_test_pdfs.py  inspect-astro-fonts.js  migrate_existing_data.py  rank_jobs.py  update-brand-text-centering.py  update-brand-text-svg.py  validate-svg-font-fix.js
scripts/job_scraper/: README.md  aggregate_jobs.py  batch_scrape_jobs.py  job_urls.txt  seek_scraper.py  test_aggregator.py  test_single_job.py
tests/: conftest.py  test_aggregator.py  test_ats_analyzer.py  test_ats_keywords.py  test_ats_output.py  test_ats_parsers.py  test_ats_scoring.py  test_batch.py  test_cli.py  test_config.py  test_database.py  test_employment_hero_scraper.py  test_indeed_manual_parser.py  test_integration.py  test_pdf_converter.py  test_scraper.py  test_scraper_base.py  test_scraper_factory.py  test_scraper_linkedin_manual.py  test_utils.py
(+99 files in other folders)
