[tool.poetry]
name = "applyr"
version = "0.1.0"
description = "Intelligent Job Market Analysis Toolkit - Scrape job postings, generate market insights, and build targeted cover letters"
authors = ["Cole Morton"]
readme = "README.md"
packages = [{include = "applyr"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.0"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
markdown = "^3.5.0"
weasyprint = "^66.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.12"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
responses = "^0.25.8"
freezegun = "^1.5.5"

[tool.poetry.scripts]
applyr = "applyr.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=applyr --cov-report=html --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["applyr"]
omit = ["tests/*", "*/__pycache__/*", "applyr/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass"
]
precision = 2